--- a/about.html
+++ b/about.html
@@ -3,8 +3,11 @@
 <head>
 	<link href="style.css" rel="stylesheet">
 <title>About James</title>
-<nav class="nav">
-<ul>About Me!</ul>
+<ul class="nav">
+	<li>Home</li>
+	<li>About Me!</li>
+	<li>Photo Gallery</li>
+</ul>
 <ul>Photo Gallery</ul>
 </nav>
 </head>
