--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
 	<link href="style.css" rel="stylesheet">
 <title>About James</title>
 <ul class="nav">
-	<li>Home</li>
-	<li>About Me!</li>
-	<li>Photo Gallery</li>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="#">About</a></li>
+  <li><a href="photo-js.html">Photo Gallery</a></li>
 </ul>
 </head>
 
