--- a/photo-js.html
+++ b/photo-js.html
@@ -20,7 +20,7 @@ $(document).ready(
 	</h1>
 
 <div id="gallery">
-<img src="images/img/thumb/img_1.jpg" id="main-img" />
+<img src="images/img/img_1.jpg" id="main-img" />
 	<ul>
 	<li><img src="images/img/thumb/img_1.jpg" /></li>
 	<li><img src="images/img/thumb/img_2.jpg" /></li>
