--- a/about.html
+++ b/about.html
@@ -5,8 +5,9 @@
 <title>About James</title>
 <ul class="nav">
   <li><a href="index.html">Home</a></li>
-  <li><a href="#">About</a></li>
   <li><a href="photo-js.html">Photo Gallery</a></li>
+  <li><a href="js1.html">JavaScript One</a></li>
+  <li><a href="js2.html">JavaScirpt Two</a></li>
 </ul>
 </head>
 
