--- a/js.html
+++ b/js.html
@@ -3,7 +3,7 @@
 <head>
 <title>Hello World JS</title>
 <script>
-var kilos_to_pounds = prompt('What is the tem?')
+var kilos_to_pounds = prompt('What is the weight in kilo?')
 var weight = 2.2;
 	alert('Your weight in pounds is:' + kilos_to_pounds * weight);
 	</script>
