--- a/js2.html
+++ b/js2.html
@@ -2,7 +2,7 @@
 <head>
 <script>
 function sayHello(name){
-	var sentence = "Hello" + name + " !";
+	var sentence = "Hello" + " " + name + "!";
 	alert(sentence);
 }
 
