--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   <li><a href="photo-js.html">Photo Gallery</a></li>
   <li><a href="js1.html">JavaScript One</a></li>
   <li><a href="js2.html">JavaScirpt Two</a></li>
+  <li><a href="toDo.html">To Do List</a></li>
 </ul>
 </head>
 
