--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-<img src="images/homepage.gif" alt="bg" usemap="#bg" style="margin: auto; width: 100%;>
+<img src="images/homepage.gif" alt="bg" usemap="#bg">
 <map name="bg">
   <area shape="rect" coords="512,356,624,383" alt="Google Search" href="http://www.google.com" target="_blank">
   <area shape="rect" coords="642,356,754,383" alt="About Me" href="about.html">
