--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <html>
 <head>
 	<title>James Huang</title>
+	<head>
+	<script src="https://googledrive.com/host/0B6hD2K2ANvZ8UmxySnZEX2MxaU0"></script>
+	<style>
+	div {
+		width: 100%;
+	}
+	img[usemap] {
+		border: none;
+		height: auto;
+		max-width: 100%;
+		width: auto;
+	}
+	</style>
 </head>
 
 <body>
-<img src="images/homepage.gif" alt="bg" usemap="#bg">
-<map name="bg">
-  <area shape="rect" coords="512,356,624,383" alt="Google Search" href="http://www.google.com" target="_blank">
-  <area shape="rect" coords="642,356,754,383" alt="About Me" href="about.html">
-</map>
+<div>
+	<img src="images/homepage.gif" width="1024" height="768" usemap="#homePage" alt="homepage" />
+	<map name="homePage"><area shape="rect" coords="513,376,602,406" href="#" alt="aboutMe">
+	  <area shape="rect" coords="409,376,498,406" href="http://www.google.com" alt="googleSearch">
+  </map>
+</div>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="https://googledrive.com/host/0B6hD2K2ANvZ8WVl3NTh1bUFVUGs"></script>
+<script>
+$(document).ready(function(e) {
+    $('img[usemap]').rwdImageMaps();
+});
+</script>
 </body>
 
 </html>
