--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 <div>
 	<img src="images/homepage.gif" width="1024" height="768" usemap="#homePage" alt="homepage" />
-	<map name="homePage"><area shape="rect" coords="513,376,602,406" href="#" alt="aboutMe">
+	<map name="homePage"><area shape="rect" coords="513,376,602,406" href="about.html" alt="aboutMe">
 	  <area shape="rect" coords="409,376,498,406" href="http://www.google.com" alt="googleSearch">
   </map>
 </div>
