--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
   <li><a href="js1.html">JavaScript One</a></li>
   <li><a href="js2.html">JavaScirpt Two</a></li>
   <li><a href="toDo.html">To Do List</a></li>
+  <li><a href="http://tkdomain.github.io">Webpage</a></li>
+  <li><a href="http://james-bavcsf.rhcloud.com">Website</a></li>
 </ul>
 </head>
 
@@ -19,7 +21,7 @@
 
 <div class="text">
 <p><font color="#3333CC" size="5"> 
-My name is James Huang. I have experiences on html, css, and javascript. I also have my own websites on wordpress and blogger. I am passionate about coding and the web because new technologies can improve our lives. I love the internet because it is a great tool for everyone to connect with people in a world. 
+My name is James Huang. I have experiences on html, css, javascript and photoshop. I also have my own websites on wordpress and blogger. I am passionate about coding and the web because new technologies can improve our lives. I love the internet because it is a great tool for everyone to connect with people in a world. 
 </font></p>
 </div>
 
