--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <li><a href="js1.html">JavaScript One</a></li>
   <li><a href="js2.html">JavaScirpt Two</a></li>
   <li><a href="toDo.html">To Do List</a></li>
-  <li><a href="http://tkdomain.github.io">Webpage</a></li>
+  <li><a href="http://tkdomain.github.io" target="_blank">Webpage</a></li>
   <li><a href="http://james-bavcsf.rhcloud.com">Website</a></li>
 </ul>
 </head>
